src/components/Footer.css
.footer {
  background-color: var(--background-secondary);

  .hero {
    position: relative;
    /* min-height: 370px; */
    background-image: url('../assets/img/footer-bg.jpg');
    background-size: cover;
    overflow: hidden;

    .container {
      position: relative;

      .links {
        position: relative;
        z-index: 1;
        padding-block: 2.7rem;

        .columns {
          display: flex;
          flex-wrap: wrap;
          gap: 2rem;

          .column {
            display: flex;
            flex-direction: column;
            gap: 1rem;

            ul {
              margin-top: 0.8rem;

              .link {
                display: block;
                color: var(--foreground-muted);
                padding-block: 0.15rem;
              }
            }
          }
        }
      }

      .logo {
        position: absolute;
        z-index: 0;
        top: 50%;
        right: 1rem;
        max-width: none;
        transform: translateY(-49.5%);
        opacity: 0.9;
        pointer-events: none;
      }
    }
  }
}

